# CraftGE

./: .gitignore  .gitmodules  CMakeLists.txt  CraftGE.sln  LICENSE  README.md  learnOpenGL.sln
CraftGE/: CraftGE.vcxproj
CraftGE/include/: Mesh.h  Model.h  Shadow.h  Skybox.h
CraftGE/include/glad/: glad.h
CraftGE/lib/: glfw3.lib
CraftGE/shader/: object_n.frag  object_n.vert  pointShadow.vert  simple.frag  simple.vert  simpleShadow.frag  skybox.vert
CraftGE/src/: Mesh.cpp  Model.cpp  main.cpp
include/: Camera.h  Input.h  Light.h  Mesh.h  Model.h  ModelManager.h  Object.h  ParticleSystem.h  Scene.h  SceneManager.h  Shader.h
learnOpenGL/: learnOpenGL.vcxproj  learnOpenGL.vcxproj.filters
learnOpenGL/include/: Camera.h  Light.h  Mesh.h  Model.h  Object.h  Scene.h  Shader.h  Texture.h
learnOpenGL/lib/: assimp-vc140-mt.lib
learnOpenGL/shader/: object.frag  pointDepth.geom  pointShadow.frag  simple.vert
learnOpenGL/src/: Camera.cpp  Light.cpp  Mesh.cpp  Model.cpp  Object.cpp  Scene.cpp  Shader.cpp  Shadow.cpp  Skybox.cpp  Texture.cpp  glad.c  main.cpp
res/models/cube/: cube.mtl
res/models/floor/: floor.mtl
res/models/normalcube/: cube.mtl
res/models/wall/: wall.mtl
res/models/wan/: Wan.mtl
res/models/wanModels/: wanModel.mtl
res/models/water/: water.mtl
shader/: debug_quad_depth.fs  object_n.frag  object_nospec.frag  simpleShadow.vert
shader/deferred/: deferred_gbuffer.frag  deferred_gbuffer.vert  lighting_pass.frag  lighting_pass_fog.frag
shader/particles/: particles.frag  particles.vert  particles_mult_period.vert  rain.frag  rain.vert
shader/water/: wall.frag  water.frag  water.vert
src/: Input.cpp  Light.cpp  Mesh.cpp  Model.cpp  ModelManager.cpp  Object.cpp  ParticleSystem.cpp  Scene.cpp  SceneManager.cpp  main.cpp
